--- a/Assignment1/Views/Home/Index.cshtml
+++ b/Assignment1/Views/Home/Index.cshtml
@@ -50,6 +50,8 @@
         <p>OverWeight : 25-29.9</p>
         <p>Obesity : >=30</p>
 
+        <p>Thank You</p>
+
         </div>
         </body>
 
