--- a/Assignment1/Views/Home/Index.cshtml
+++ b/Assignment1/Views/Home/Index.cshtml
@@ -9,6 +9,7 @@
     </head>
     <body>
         <h1 class="title" style='color:red'>@ViewBag.title</h1>
+    <h3>Voilà !</h3>
         <p>Testing for the CI/CD pipeline Implimentation automatically....</p>
         
         
