--- a/Assignment1/Views/Home/Index.cshtml
+++ b/Assignment1/Views/Home/Index.cshtml
@@ -12,6 +12,7 @@
     <h3>Voilà !</h3>
         <p>Testing for the CI/CD pipeline Implimentation automatically....</p>
         <i> CI Working Now....... </i>
+        <i> CD working fine Now auto...</i>
         
         <form method="post">
         <div class=" row col-12">
